--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -19,7 +19,7 @@
         <img alt="Silhouette of a person's head" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
       </ion-avatar> -->
 
-     <br> <ion-button id="google" (click)="whats()" expand="block" type="submit"
+     <br> <ion-button [routerLink]="['/tabs/tab4']" expand="block" type="submit"
         >Entrar</ion-button>
       <ion-button (click)="whats()" expand="block" type="submit"
         >Conectar com o Google</ion-button>
